--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,11 @@ name = "temporaldata"
 version = "0.1.3"
 description = "A utility package for complex temporal data manipulation"
 readme = "README.md"
-authors = [
-    {name = "Mehdi Azabou", email = "mehdiazabou@gmail.com"},
-]
-license = {text = "MIT"}
+authors = [{ name = "Mehdi Azabou", email = "mehdiazabou@gmail.com" }]
+license = { text = "MIT" }
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License", 
+    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
 requires-python = ">=3.8"
@@ -22,15 +20,11 @@ dependencies = [
     "numpy>=1.14.0",
     "pandas>=1.0.0",
     "h5py>=3.0.0",
+    "scipy>=1.0.0",
 ]
 
 [project.optional-dependencies]
-dev = [
-    "pytest",
-    "black==24.2.0",
-    "pre-commit>=3.5.0",
-    "flake8",
-]
+dev = ["pytest", "black==24.2.0", "pre-commit>=3.5.0", "flake8"]
 
 [project.urls]
 Homepage = "https://github.com/neuro-galaxy/temporaldata"
